--- a/automationscript/test-output/index.html
+++ b/automationscript/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\saiprasad.g\AppData\Local\Temp\testng-eclipse--600296946\testng-customsuite.xml</span>
+                    <span>C:\Users\saiprasad.g\AppData\Local\Temp\testng-eclipse-1391336034\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automationscript.Lanuch" class="method navigator-link" hash-for-method="Lanching_the_Browser">Lanching_the_Browser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automationscript.SignupandLogin$Login" class="method navigator-link" hash-for-method="Lanching_the_Browser">Lanching_the_Browser</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automationscript.SignupandLogin$Login" class="method navigator-link" hash-for-method="Sigup_for_mobiles">Sigup_for_mobiles</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,7 +127,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automationscript.Lanuch</span>
+              <span class="class-name">automationscript.SignupandLogin$Login</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -132,12 +137,19 @@
                   <span class="method-name">Lanching_the_Browser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Sigup_for_mobiles">
+                  </a> <!-- Sigup_for_mobiles -->
+                  <span class="method-name">Sigup_for_mobiles</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\saiprasad.g\AppData\Local\Temp\testng-eclipse--600296946\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\saiprasad.g\AppData\Local\Temp\testng-eclipse-1391336034\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automationscript.Lanuch&quot;/&gt;
+      &lt;class name=&quot;automationscript.SignupandLogin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Lanching_the_Browser')
-data.setCell(0, 2, 'automationscript.Lanuch')
-data.setCell(0, 3, 13059);
+data.setCell(0, 1, 'Sigup_for_mobiles')
+data.setCell(0, 2, 'automationscript.SignupandLogin$Login')
+data.setCell(0, 3, 4461);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Lanching_the_Browser')
+data.setCell(1, 2, 'automationscript.SignupandLogin$Login')
+data.setCell(1, 3, 4232);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,10 +237,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automationscript.Lanuch</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">automationscript.SignupandLogin$Login</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Lanching_the_Browser</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Sigup_for_mobiles</span>
+                <span class="method-start">4262 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
