--- a/automationscript/test-output/emailable-report.html
+++ b/automationscript/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,770</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,709</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">automationscript.SignupandLogin$Login</td><td><a href="#m0">Lanching_the_Browser</a></td><td rowspan="1">1659421551981</td><td rowspan="1">4232</td></tr><tr class="passedeven"><td><a href="#m1">Sigup_for_mobiles</a></td><td rowspan="1">1659421556243</td><td rowspan="1">4461</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">automationscript.Lanuch</td><td><a href="#m0">Lanching_the_Browser</a></td><td rowspan="1">1659440543932</td><td rowspan="1">5665</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">automationscript.SignupandLogin$Login#Lanching_the_Browser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">automationscript.SignupandLogin$Login#Sigup_for_mobiles</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">automationscript.Lanuch#Lanching_the_Browser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
