--- a/automationscript/test-output/old/Default suite/classes.html
+++ b/automationscript/test-output/old/Default suite/classes.html
@@ -4,11 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>automationscript.Lanuch</td>
+<td>automationscript.Searchandorder$Search</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>Order</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>search</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>Lanching_the_Browser</td>
