--- a/automationscript/test-output/old/Default suite/methods.html
+++ b/automationscript/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7acd7b">  <td>22/08/02 17:12:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.Lanuch@21e360a]">Lanching_the_Browser</td> 
-  <td>main@2045036434</td>   <td></td> </tr>
+<tr bgcolor="abb66f">  <td>22/08/02 18:05:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Searchandorder$Search.Order()[pri:3, instance:automationscript.Searchandorder$Search@741a8937]">Order</td> 
+  <td>main@95396809</td>   <td></td> </tr>
+<tr bgcolor="e965f5">  <td>22/08/02 18:05:20</td>   <td>-12264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.Searchandorder$Search@741a8937]">Lanching_the_Browser</td> 
+  <td>main@95396809</td>   <td></td> </tr>
+<tr bgcolor="abb66f">  <td>22/08/02 18:05:28</td>   <td>-3651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Searchandorder$Search.search()[pri:2, instance:automationscript.Searchandorder$Search@741a8937]">search</td> 
+  <td>main@95396809</td>   <td></td> </tr>
 </table>
