--- a/automationscript/test-output/index.html
+++ b/automationscript/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="automationscript.Lanuch" class="method navigator-link" hash-for-method="Lanching_the_Browser">Lanching_the_Browser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="automationscript.SignupandLogin" class="method navigator-link" hash-for-method="Lanching_the_Browser">Lanching_the_Browser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="automationscript.contactUs_page" class="method navigator-link" hash-for-method="Lanching_the_Browser">Lanching_the_Browser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="automationscript.Searchandorder" class="method navigator-link" hash-for-method="Lanching_the_Browser">Lanching_the_Browser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="automationscript.Searchandorder" class="method navigator-link" hash-for-method="Order">Order</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="automationscript.Login" class="method navigator-link" hash-for-method="Login1">Login1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -157,60 +137,9 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automationscript.Searchandorder</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="Lanching_the_Browser">
-                  </a> <!-- Lanching_the_Browser -->
-                  <span class="method-name">Lanching_the_Browser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Order">
-                  </a> <!-- Order -->
-                  <span class="method-name">Order</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="search">
-                  </a> <!-- search -->
-                  <span class="method-name">search</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">automationscript.Lanuch</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="Lanching_the_Browser">
-                  </a> <!-- Lanching_the_Browser -->
-                  <span class="method-name">Lanching_the_Browser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">automationscript.SignupandLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="Lanching_the_Browser">
-                  </a> <!-- Lanching_the_Browser -->
-                  <span class="method-name">Lanching_the_Browser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="Sigup_for_mobiles">
@@ -223,16 +152,39 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automationscript.contactUs_page</span>
+              <span class="class-name">automationscript.Login</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Lanching_the_Browser">
-                  </a> <!-- Lanching_the_Browser -->
-                  <span class="method-name">Lanching_the_Browser</span>
+                  <a name="Login1">
+                  </a> <!-- Login1 -->
+                  <span class="method-name">Login1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">automationscript.Searchandorder</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="search">
+                  </a> <!-- search -->
+                  <span class="method-name">search</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">automationscript.contactUs_page</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
                   <a name="contactUs">
@@ -252,11 +204,11 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; parallel=&quot;classes&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automationscript.Searchandorder&quot;/&gt;
-      &lt;class name=&quot;automationscript.Lanuch&quot;/&gt;
       &lt;class name=&quot;automationscript.SignupandLogin&quot;/&gt;
+      &lt;class name=&quot;automationscript.Login&quot;/&gt;
+      &lt;class name=&quot;automationscript.Searchandorder&quot;/&gt;
       &lt;class name=&quot;automationscript.contactUs_page&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
@@ -297,44 +249,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Lanching_the_Browser')
-data.setCell(0, 2, 'automationscript.Lanuch')
-data.setCell(0, 3, 17553);
+data.setCell(0, 1, 'search')
+data.setCell(0, 2, 'automationscript.Searchandorder')
+data.setCell(0, 3, 4755);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Lanching_the_Browser')
+data.setCell(1, 1, 'Sigup_for_mobiles')
 data.setCell(1, 2, 'automationscript.SignupandLogin')
-data.setCell(1, 3, 16345);
+data.setCell(1, 3, 2302);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Lanching_the_Browser')
+data.setCell(2, 1, 'contactUs')
 data.setCell(2, 2, 'automationscript.contactUs_page')
-data.setCell(2, 3, 15877);
+data.setCell(2, 3, 1769);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Lanching_the_Browser')
-data.setCell(3, 2, 'automationscript.Searchandorder')
-data.setCell(3, 3, 15423);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'contactUs')
-data.setCell(4, 2, 'automationscript.contactUs_page')
-data.setCell(4, 3, 7274);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'Sigup_for_mobiles')
-data.setCell(5, 2, 'automationscript.SignupandLogin')
-data.setCell(5, 3, 7233);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'search')
-data.setCell(6, 2, 'automationscript.Searchandorder')
-data.setCell(6, 3, 5893);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'Order')
-data.setCell(7, 2, 'automationscript.Searchandorder')
-data.setCell(7, 3, 4479);
+data.setCell(3, 1, 'Login1')
+data.setCell(3, 2, 'automationscript.Login')
+data.setCell(3, 3, 461);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -360,57 +296,64 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automationscript.Lanuch</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">Lanching_the_Browser</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
               <div class="chronological-class-name">automationscript.SignupandLogin</div> <!-- chronological-class-name -->
-              <div class="test-method">
+              <div class="configuration-method before">
                 <span class="method-name">Lanching_the_Browser</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">automationscript.contactUs_page</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">Lanching_the_Browser</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">automationscript.Searchandorder</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">Lanching_the_Browser</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">search</span>
-                <span class="method-start">15432 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">automationscript.contactUs_page</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">contactUs</span>
-                <span class="method-start">15880 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">automationscript.Searchandorder</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">Order</span>
-                <span class="method-start">21327 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">automationscript.SignupandLogin</div> <!-- chronological-class-name -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Sigup_for_mobiles</span>
-                <span class="method-start">25820 ms</span>
+                <span class="method-start">7088 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserclose</span>
+                <span class="method-start">9392 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">automationscript.Login</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">Lanching_the_Browser</span>
+                <span class="method-start">9638 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">Login1</span>
+                <span class="method-start">12097 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserclose</span>
+                <span class="method-start">12559 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">automationscript.Searchandorder</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">Lanching_the_Browser</span>
+                <span class="method-start">12791 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">search</span>
+                <span class="method-start">15230 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserclose</span>
+                <span class="method-start">19986 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">automationscript.contactUs_page</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">Lanching_the_Browser</span>
+                <span class="method-start">20253 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">contactUs</span>
+                <span class="method-start">22732 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserclose</span>
+                <span class="method-start">24503 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
