--- a/automationscript/test-output/old/Suite/methods.html
+++ b/automationscript/test-output/old/Suite/methods.html
@@ -1,20 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="abb66f">  <td>22/08/02 22:22:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.Lanuch@6404f418]">Lanching_the_Browser</td> 
-  <td>TestNG-test=Test-2@1014796361</td>   <td></td> </tr>
-<tr bgcolor="97bc88">  <td>22/08/02 22:22:30</td>   <td>15883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="contactUs_page.contactUs()[pri:4, instance:automationscript.contactUs_page@32502377]">contactUs</td> 
-  <td>TestNG-test=Test-4@925578240</td>   <td></td> </tr>
-<tr bgcolor="abb66f">  <td>22/08/02 22:22:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.SignupandLogin@729d991e]">Lanching_the_Browser</td> 
-  <td>TestNG-test=Test-3@1959608059</td>   <td></td> </tr>
-<tr bgcolor="7acd7b">  <td>22/08/02 22:22:29</td>   <td>15435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Searchandorder.search()[pri:2, instance:automationscript.Searchandorder@6fd83fc1]">search</td> 
-  <td>TestNG-test=Test-1@887148369</td>   <td></td> </tr>
-<tr bgcolor="abb66f">  <td>22/08/02 22:22:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.contactUs_page@32502377]">Lanching_the_Browser</td> 
-  <td>TestNG-test=Test-4@925578240</td>   <td></td> </tr>
-<tr bgcolor="7acd7b">  <td>22/08/02 22:22:35</td>   <td>21330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Searchandorder.Order()[pri:3, instance:automationscript.Searchandorder@6fd83fc1]">Order</td> 
-  <td>TestNG-test=Test-1@887148369</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>22/08/02 22:22:39</td>   <td>25823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignupandLogin.Sigup_for_mobiles()[pri:0, instance:automationscript.SignupandLogin@729d991e]">Sigup_for_mobiles</td> 
-  <td>TestNG-test=Test-5@334089247</td>   <td></td> </tr>
-<tr bgcolor="abb66f">  <td>22/08/02 22:22:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.Searchandorder@6fd83fc1]">Lanching_the_Browser</td> 
-  <td>TestNG-test=Test-1@887148369</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>22/08/04 18:48:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="contactUs_page.contactUs()[pri:4, instance:automationscript.contactUs_page@73e9cf30]">contactUs</td> 
+  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>22/08/04 18:47:55</td>   <td>-9941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.Searchandorder@272113c4]">&gt;&gt;Lanching_the_Browser</td> 
+<td>&nbsp;</td>  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>22/08/04 18:48:02</td>   <td>-2746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Lanuch.browserclose()[pri:0, instance:automationscript.Searchandorder@272113c4]">&lt;&lt;browserclose</td> 
+<td>&nbsp;</td>  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>22/08/04 18:47:42</td>   <td>-22731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.SignupandLogin@5a56cdac]">&gt;&gt;Lanching_the_Browser</td> 
+<td>&nbsp;</td>  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="7acd7b">  <td>22/08/04 18:47:50</td>   <td>-15644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignupandLogin.Sigup_for_mobiles()[pri:1, instance:automationscript.SignupandLogin@5a56cdac]">Sigup_for_mobiles</td> 
+  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="abb66f">  <td>22/08/04 18:47:55</td>   <td>-10635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.Login1()[pri:2, instance:automationscript.Login@783a467b]">Login1</td> 
+  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>22/08/04 18:47:52</td>   <td>-13094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.Login@783a467b]">&gt;&gt;Lanching_the_Browser</td> 
+<td>&nbsp;</td>  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>22/08/04 18:47:58</td>   <td>-7502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Searchandorder.search()[pri:0, instance:automationscript.Searchandorder@272113c4]">search</td> 
+  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>22/08/04 18:48:07</td>   <td>1773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Lanuch.browserclose()[pri:0, instance:automationscript.contactUs_page@73e9cf30]">&lt;&lt;browserclose</td> 
+<td>&nbsp;</td>  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>22/08/04 18:48:03</td>   <td>-2479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Lanuch.Lanching_the_Browser()[pri:0, instance:automationscript.contactUs_page@73e9cf30]">&gt;&gt;Lanching_the_Browser</td> 
+<td>&nbsp;</td>  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>22/08/04 18:47:52</td>   <td>-13340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Lanuch.browserclose()[pri:0, instance:automationscript.SignupandLogin@5a56cdac]">&lt;&lt;browserclose</td> 
+<td>&nbsp;</td>  <td>main@113411247</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>22/08/04 18:47:55</td>   <td>-10173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Lanuch.browserclose()[pri:0, instance:automationscript.Login@783a467b]">&lt;&lt;browserclose</td> 
+<td>&nbsp;</td>  <td>main@113411247</td>   <td></td> </tr>
 </table>
